@@ -13,8 +13,8 @@ import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
 
-// Reseteamos la base de datos para partir de una situación conocida
-@Sql(value = {"/reset.sql"}, executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD)
+// Ejecuta reset.sql antes de cada método para limpiar la BD
+@Sql(value = "/reset.sql", executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD)
 @DataJpaTest
 class TitularesRepositoryTest {
 
@@ -22,113 +22,109 @@ class TitularesRepositoryTest {
 
     @Autowired
     private TitularesRepository repositorio;
+
     @Autowired
-    private TestEntityManager entityManager; // EntityManager para hacer las pruebas
+    private TestEntityManager entityManager;
 
     @BeforeEach
     void setUp() {
-        // Insertamos un titular antes de cada test
+        // Guardamos el titular "Jose".
+        // IMPORTANTE: Al hacer persist, JPA actualiza el objeto 'titular' con el ID real que la BD le ha asignado.
         entityManager.persist(titular);
-        // Sincroniza los cambios en los objetos del contexto de persistencia con la BD
         entityManager.flush();
     }
 
     @Test
     void findAll() {
-        // Act
         List<Titular> titulares = repositorio.findAll();
 
-        // Assert
         assertAll("findAll",
                 () -> assertNotNull(titulares),
-                () -> assertFalse(titulares.isEmpty())
+                () -> assertFalse(titulares.isEmpty()),
+                // Como reset.sql borró todo y setUp metió 1, debería haber 1
+                () -> assertEquals(1, titulares.size())
         );
     }
 
     @Test
     void findByNombre() {
-        // Act
         List<Titular> titulares = repositorio.findByNombreContainingIgnoreCase("Jose");
 
-        // Assert
-        assertAll("findAllByNombre",
+        assertAll("findByNombre",
                 () -> assertNotNull(titulares),
                 () -> assertFalse(titulares.isEmpty()),
-                () -> assertEquals("Jose", titulares.getFirst().getNombre())
+                () -> assertEquals("Jose", titulares.get(0).getNombre())
         );
     }
 
     @Test
     void findById() {
-        // Act
-        Titular titular = repositorio.findById(1L).orElse(null);
+        // ERROR CORREGIDO: No buscamos el 1L, buscamos titular.getId()
+        // Así el test funciona tenga el ID que tenga (1, 3, 50...)
+        Titular titularEncontrado = repositorio.findById(titular.getId()).orElse(null);
 
-        // Assert
         assertAll("findById",
-                () -> assertNotNull(titular),
-                () -> assertEquals("Jose", titular.getNombre())
+                () -> assertNotNull(titularEncontrado),
+                () -> assertEquals("Jose", titularEncontrado.getNombre())
         );
     }
 
     @Test
     void findByIdNotFound() {
-        // Act
-        Titular titular = repositorio.findById(100L).orElse(null);
+        // Buscamos un ID que seguro no existe (el actual + 999)
+        Titular titularNoExiste = repositorio.findById(titular.getId() + 999L).orElse(null);
 
-        // Assert
-        assertNull(titular);
+        assertNull(titularNoExiste);
     }
 
     @Test
     void save() {
-        // Act
-        Titular titular = repositorio.save(Titular.builder().nombre("Pepe").build());
+        Titular nuevo = repositorio.save(Titular.builder().nombre("Pepe").build());
 
-        // Assert
         assertAll("save",
-                () -> assertNotNull(titular),
-                () -> assertEquals("Pepe", titular.getNombre())
+                () -> assertNotNull(nuevo),
+                () -> assertNotNull(nuevo.getId()),
+                () -> assertEquals("Pepe", nuevo.getNombre())
         );
     }
 
     @Test
     void update() {
-        // Act
-        var titularExistente = repositorio.findById(1L).orElse(null);
+        // 1. Recuperamos el titular existente usando su ID real
+        var titularExistente = repositorio.findById(titular.getId()).orElseThrow();
+
+        // 2. Modificamos manteniendo el MISMO ID
         Titular titularActualizar = Titular.builder()
                 .id(titularExistente.getId())
-                .nombre("Pepe").build();
+                .nombre("Jose_Updated")
+                .build();
+
         Titular titularActualizado = repositorio.save(titularActualizar);
 
-        // Assert
         assertAll("update",
                 () -> assertNotNull(titularActualizado),
-                () -> assertEquals("Pepe", titularActualizado.getNombre())
+                () -> assertEquals("Jose_Updated", titularActualizado.getNombre()),
+                () -> assertEquals(titularExistente.getId(), titularActualizado.getId())
         );
     }
 
     @Test
     void delete() {
-        // Act
-        var titularBorrar = repositorio.findById(1L).orElse(null);
-        repositorio.delete(titularBorrar);
-        Titular titularBorrado = repositorio.findById(1L).orElse(null);
+        // Recuperamos el titular usando su ID real
+        var titularBorrar = repositorio.findById(titular.getId()).orElseThrow();
 
-        // Assert
+        repositorio.delete(titularBorrar);
+
+        // Verificamos que ya no existe
+        Titular titularBorrado = repositorio.findById(titular.getId()).orElse(null);
+
         assertNull(titularBorrado);
     }
 
-    // Para comprobar la diferencia entre usar FetchType.EAGER o LAZY en la relación de titular con tarjetas
-    // hay que añadir o quitar fetch = FetchType.EAGER a la anotación @OneToMany.  No se puede hacer por código.
-    // En este tipo de relación la opción por defecto es LAZY.
     @Test
     void test_FetchType_EAGER_vs_LAZY() {
-        // Vacía la cache del contexto de persistencia (L1 Cache) para poder ver todas
-        // las consultas a la BD en la consola
         entityManager.clear();
-
-        Titular titular = repositorio.findById(1L).orElse(null);
-        assertNotNull(titular);
+        Titular titularEncontrado = repositorio.findById(titular.getId()).orElse(null);
+        assertNotNull(titularEncontrado);
     }
-
 }
